<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.eluss.gdansknumerek.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_weight="9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Wybierz zespół obsługi mieszkańców poniżej:"
                android:textColor="@color/grayTextColor" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@layout/rounded_button_red">

                        <Button
                            android:id="@+id/zom1Button"
                            android:layout_width="wrap_content"
                            android:layout_height="70dp"
                            android:background="?android:attr/selectableItemBackground"
                            android:text="@string/zom1_button"
                            android:textAllCaps="false"
                            android:textColor="@color/lightTextColor" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@layout/rounded_button_gray">

                        <Button
                            android:id="@+id/zom2Button"
                            android:layout_width="wrap_content"
                            android:layout_height="70dp"
                            android:background="?android:attr/selectableItemBackground"
                            android:text="@string/zom2_button"
                            android:textAllCaps="false" />
                    </FrameLayout>
                </LinearLayout>

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@layout/rounded_button_gray">

                        <Button
                            android:id="@+id/zom3Button"
                            android:layout_width="wrap_content"
                            android:layout_height="70dp"
                            android:background="?android:attr/selectableItemBackground"
                            android:text="@string/zom3_button"
                            android:textAllCaps="false" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@layout/rounded_button_red">

                        <Button
                            android:id="@+id/zom4Button"
                            android:layout_width="wrap_content"
                            android:layout_height="70dp"
                            android:background="?android:attr/selectableItemBackground"
                            android:text="@string/zom4_button"
                            android:textAllCaps="false"
                            android:textColor="@color/lightTextColor" />
                    </FrameLayout>
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/grayColor" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                android:background="@color/grayColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_main"
                android:textColor="@color/grayTextColor" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_weight="1"
                android:src="@mipmap/bip" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:src="@mipmap/logo_color" />
        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>
